fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,10 +50,6 @@ body {
   font-weight: 400;
   font-style: normal;
   color: #707070;
-  width: 133%;
-  height: 133%;
-  transform-origin: top left;
-  transform: scale(75%);
 }
 
 .f-left {
